# health-statistics

./: HealthSensorCreate.cpp  HealthSensorCreate.hpp  README.md  bmc_healthSensors_config.json  curr-host-state-monitor.service  curr-host-state-monitor.sh  health-statistics-service.in  meson.build  req-host-trans-monitor.service  req-host-trans-monitor.sh  restart-cause-monitor.service  restart-cause-monitor.sh  usage-statistics-monitor.service  usage-statistics-monitor.sh
